[gd_scene load_steps=48 format=2]

[ext_resource path="res://Assets/Tile Overlays/very_wet.png" type="Texture" id=1]
[ext_resource path="res://Assets/Tile Overlays/wet.png" type="Texture" id=2]
[ext_resource path="res://Assets/Tile Overlays/very_dry.png" type="Texture" id=3]
[ext_resource path="res://Assets/Tile Overlays/dry.png" type="Texture" id=4]
[ext_resource path="res://Assets/UI/Buttons/x_regular.png" type="Texture" id=5]
[ext_resource path="res://Assets/UI/Buttons/arrow_down_regular.png" type="Texture" id=6]
[ext_resource path="res://Assets/UI/city_menu_pane.png" type="Texture" id=7]
[ext_resource path="res://Assets/UI/Buttons/market_hover.png" type="Texture" id=8]
[ext_resource path="res://Assets/UI/Buttons/arrow_up_regular.png" type="Texture" id=9]
[ext_resource path="res://Assets/UI/market_screen.png" type="Texture" id=10]
[ext_resource path="res://Assets/UI/Buttons/market_regular.png" type="Texture" id=11]
[ext_resource path="res://Assets/UI/Buttons/back_hover.png" type="Texture" id=12]
[ext_resource path="res://Assets/UI/Buttons/arrow_down_hover.png" type="Texture" id=13]
[ext_resource path="res://Assets/UI/Buttons/x_hover.png" type="Texture" id=14]
[ext_resource path="res://Assets/UI/Buttons/back_regular.png" type="Texture" id=15]
[ext_resource path="res://Assets/UI/Buttons/arrow_up_hover.png" type="Texture" id=16]
[ext_resource path="res://Tilesets/TempTileset.tres" type="TileSet" id=17]
[ext_resource path="res://Tilesets/CityTileset.tres" type="TileSet" id=18]
[ext_resource path="res://Tilesets/BiomeTileset.tres" type="TileSet" id=19]
[ext_resource path="res://Tilesets/VegetationTileset.tres" type="TileSet" id=20]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=21]
[ext_resource path="res://Scripts/Artikels.gd" type="Script" id=22]
[ext_resource path="res://Scripts/BiomeMap.gd" type="Script" id=23]
[ext_resource path="res://Scripts/Cities.gd" type="Script" id=24]
[ext_resource path="res://Scripts/CityLabel.gd" type="Script" id=25]
[ext_resource path="res://Scripts/BiomeSelector.gd" type="Script" id=26]
[ext_resource path="res://Scripts/CityMenu.gd" type="Script" id=27]
[ext_resource path="res://Fonts/Quicksand/QuicksandBold.tres" type="DynamicFont" id=28]
[ext_resource path="res://Fonts/Quicksand/Quicksand.tres" type="DynamicFont" id=29]
[ext_resource path="res://Scripts/Main.gd" type="Script" id=30]
[ext_resource path="res://Scripts/MarketMenu.gd" type="Script" id=31]
[ext_resource path="res://Scripts/DateBar.gd" type="Script" id=32]
[ext_resource path="res://Scripts/Tools.gd" type="Script" id=33]
[ext_resource path="res://Scripts/MoistureMap.gd" type="Script" id=34]
[ext_resource path="res://Scripts/PreviewContainer.gd" type="Script" id=35]
[ext_resource path="res://Scripts/WorldGen.gd" type="Script" id=36]
[ext_resource path="res://Scripts/TempMap.gd" type="Script" id=37]
[ext_resource path="res://Assets/UI/Buttons/buy_hover.png" type="Texture" id=38]
[ext_resource path="res://Assets/UI/main_menu.png" type="Texture" id=39]
[ext_resource path="res://Assets/UI/Buttons/sell_regular.png" type="Texture" id=40]
[ext_resource path="res://Assets/UI/Buttons/sell_hover.png" type="Texture" id=41]
[ext_resource path="res://Assets/UI/Buttons/buy_regular.png" type="Texture" id=42]
[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=43]
[ext_resource path="res://Assets/UI/Buttons/new_game_regular.png" type="Texture" id=44]
[ext_resource path="res://Assets/UI/Buttons/new_game_hovered.png" type="Texture" id=45]
[ext_resource path="res://Assets/UI/load_screen_splash.png" type="Texture" id=46]

[sub_resource type="TileSet" id=1]
0/name = "very_dry.png 0"
0/texture = ExtResource( 3 )
0/tex_offset = Vector2( 0, -58 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 128, 128, 128 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "dry.png 1"
1/texture = ExtResource( 4 )
1/tex_offset = Vector2( 0, -58 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 128, 128, 128 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "wet.png 2"
2/texture = ExtResource( 2 )
2/tex_offset = Vector2( 0, -58 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 128, 128, 128 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "very_wet.png 3"
3/texture = ExtResource( 1 )
3/tex_offset = Vector2( 0, -58 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 128, 128, 128 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0

[node name="Main" type="Node"]
script = ExtResource( 30 )

[node name="Tools" type="Node2D" parent="."]
script = ExtResource( 33 )

[node name="Artikels" type="Node2D" parent="."]
script = ExtResource( 22 )

[node name="WorldGen" type="Node" parent="."]
script = ExtResource( 36 )

[node name="BiomeMap" type="TileMap" parent="WorldGen"]
mode = 1
tile_set = ExtResource( 19 )
cell_size = Vector2( 128, 64 )
collision_bounce = 0.1
format = 1
tile_data = PoolIntArray( 131081, 11, 0, 131082, 11, 0, 196617, 11, 0, 196618, 11, 0, 262153, 11, 0, 262154, 11, 0 )
script = ExtResource( 23 )

[node name="VegetationMap" type="TileMap" parent="WorldGen"]
mode = 1
tile_set = ExtResource( 20 )
cell_size = Vector2( 128, 64 )
format = 1

[node name="TempMap" type="TileMap" parent="WorldGen"]
visible = false
mode = 1
tile_set = ExtResource( 17 )
cell_size = Vector2( 128, 64 )
format = 1
script = ExtResource( 37 )

[node name="MoistureMap" type="TileMap" parent="WorldGen"]
visible = false
mode = 1
tile_set = SubResource( 1 )
cell_size = Vector2( 128, 64 )
format = 1
script = ExtResource( 34 )

[node name="CityMap" type="TileMap" parent="WorldGen"]
mode = 1
tile_set = ExtResource( 18 )
cell_size = Vector2( 128, 64 )
format = 1

[node name="PreviewContainer" type="Node2D" parent="WorldGen"]
script = ExtResource( 35 )

[node name="BiomeSelector" type="Node2D" parent="WorldGen"]
script = ExtResource( 26 )

[node name="Cities" type="Node2D" parent="."]
script = ExtResource( 24 )

[node name="Player" parent="." instance=ExtResource( 21 )]

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="DateBar" type="ColorRect" parent="UILayer"]
margin_right = 1280.0
margin_bottom = 32.0
color = Color( 0, 0, 0, 0.392157 )
script = ExtResource( 32 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DateLabel" type="Label" parent="UILayer/DateBar"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 20.0
margin_top = -8.0
margin_right = 168.0
margin_bottom = 8.0
custom_fonts/font = ExtResource( 29 )
text = "Date  ~  April 27, 1528"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatusLabel" type="Label" parent="UILayer/DateBar"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -8.0
margin_right = 100.0
margin_bottom = 8.0
custom_fonts/font = ExtResource( 29 )
text = "Paused"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SilverLabel" type="Label" parent="UILayer/DateBar"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -220.0
margin_top = -8.0
margin_right = -20.0
margin_bottom = 8.0
custom_fonts/font = ExtResource( 29 )
text = "Silver: 0"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CityLabel" type="Label" parent="UILayer"]
visible = false
modulate = Color( 0, 0, 0, 1 )
margin_right = 200.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 29 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "~~~~~~~~~~~~~~~"
script = ExtResource( 25 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenu" type="TextureRect" parent="UILayer"]
pause_mode = 2
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -959.0
margin_right = 961.0
margin_bottom = 1201.0
texture = ExtResource( 39 )
script = ExtResource( 43 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewGameButton" type="TextureButton" parent="UILayer/MainMenu"]
anchor_left = 0.5
anchor_top = 0.253
anchor_right = 0.5
anchor_bottom = 0.274
margin_left = -67.0
margin_top = 0.147003
margin_right = 68.0
margin_bottom = 2.92603
texture_normal = ExtResource( 44 )
texture_pressed = ExtResource( 45 )
texture_hover = ExtResource( 45 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CityMenu" type="TextureRect" parent="UILayer"]
pause_mode = 2
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -240.0
margin_top = -150.0
margin_right = 240.0
margin_bottom = 150.0
texture = ExtResource( 7 )
script = ExtResource( 27 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DragButton" type="Button" parent="UILayer/CityMenu"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 480.0
margin_bottom = 300.0

[node name="CityPortrait" type="TextureRect" parent="UILayer/CityMenu"]
margin_left = 9.0
margin_top = 14.0
margin_right = 230.0
margin_bottom = 134.0

[node name="CityName" type="Label" parent="UILayer/CityMenu"]
margin_left = 245.0
margin_top = 20.0
margin_right = 421.0
margin_bottom = 119.0
custom_fonts/font = ExtResource( 28 )
text = "City Name Here"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="XButton" type="TextureButton" parent="UILayer/CityMenu"]
margin_left = 455.0
margin_top = 4.0
margin_right = 475.0
margin_bottom = 24.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 14 )
texture_hover = ExtResource( 14 )

[node name="MarketButton" type="TextureButton" parent="UILayer/CityMenu"]
margin_left = 8.0
margin_top = 143.0
margin_right = 78.0
margin_bottom = 173.0
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 8 )

[node name="MarketMenu" type="TextureRect" parent="UILayer"]
pause_mode = 2
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -250.0
margin_top = -250.0
margin_right = 250.0
margin_bottom = 250.0
texture = ExtResource( 10 )
script = ExtResource( 31 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DragButton" type="Button" parent="UILayer/MarketMenu"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 4.0
margin_right = 500.0
margin_bottom = 500.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarketArtikels" type="HBoxContainer" parent="UILayer/MarketMenu"]
margin_left = 34.0
margin_top = 58.0
margin_right = 245.0
margin_bottom = 405.0
custom_constants/separation = 170
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ArtikelsVbox" type="VBoxContainer" parent="UILayer/MarketMenu/MarketArtikels"]
margin_bottom = 347.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuantitiesVbox" type="VBoxContainer" parent="UILayer/MarketMenu/MarketArtikels"]
margin_left = 170.0
margin_right = 170.0
margin_bottom = 347.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShipArtikels" type="HBoxContainer" parent="UILayer/MarketMenu"]
margin_left = 250.0
margin_top = 58.0
margin_right = 466.0
margin_bottom = 405.0
custom_constants/separation = 170
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ArtikelsVbox" type="VBoxContainer" parent="UILayer/MarketMenu/ShipArtikels"]
margin_bottom = 347.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuantitiesVbox" type="VBoxContainer" parent="UILayer/MarketMenu/ShipArtikels"]
margin_left = 170.0
margin_right = 170.0
margin_bottom = 347.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CityName" type="Label" parent="UILayer/MarketMenu"]
margin_left = 127.0
margin_top = 11.0
margin_right = 368.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 28 )
text = "City Market"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CargoLabel" type="Label" parent="UILayer/MarketMenu"]
margin_left = 314.0
margin_top = 447.0
margin_right = 368.0
margin_bottom = 471.0
text = "15 / 50"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="XButton" type="TextureButton" parent="UILayer/MarketMenu"]
margin_left = 475.0
margin_top = 4.0
margin_right = 495.0
margin_bottom = 24.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 14 )
texture_hover = ExtResource( 14 )

[node name="MarketUp" type="TextureButton" parent="UILayer/MarketMenu"]
margin_left = 14.0
margin_top = 58.0
margin_right = 34.0
margin_bottom = 78.0
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 16 )
texture_hover = ExtResource( 16 )

[node name="MarketDown" type="TextureButton" parent="UILayer/MarketMenu"]
margin_left = 14.0
margin_top = 385.0
margin_right = 34.0
margin_bottom = 405.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 13 )
texture_hover = ExtResource( 13 )

[node name="ShipUp" type="TextureButton" parent="UILayer/MarketMenu"]
margin_left = 466.0
margin_top = 58.0
margin_right = 486.0
margin_bottom = 78.0
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 16 )
texture_hover = ExtResource( 16 )

[node name="ShipDown" type="TextureButton" parent="UILayer/MarketMenu"]
margin_left = 466.0
margin_top = 385.0
margin_right = 486.0
margin_bottom = 405.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 13 )
texture_hover = ExtResource( 13 )

[node name="BackButton" type="TextureButton" parent="UILayer/MarketMenu"]
margin_left = 4.0
margin_top = 4.0
margin_right = 24.0
margin_bottom = 24.0
texture_normal = ExtResource( 15 )
texture_pressed = ExtResource( 12 )
texture_hover = ExtResource( 12 )

[node name="Sell" type="TextureButton" parent="UILayer/MarketMenu"]
margin_left = 254.0
margin_top = 411.0
margin_right = 304.0
margin_bottom = 441.0
texture_normal = ExtResource( 40 )
texture_pressed = ExtResource( 41 )
texture_hover = ExtResource( 41 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buy" type="TextureButton" parent="UILayer/MarketMenu"]
margin_left = 39.0
margin_top = 411.0
margin_right = 89.0
margin_bottom = 441.0
texture_normal = ExtResource( 42 )
texture_pressed = ExtResource( 38 )
texture_hover = ExtResource( 38 )

[node name="LoadSplash" type="TextureRect" parent="UILayer"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -200.0
margin_right = 200.0
margin_bottom = 200.0
texture = ExtResource( 46 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="UILayer/MainMenu/NewGameButton" to="." method="_on_NewGameButton_pressed"]
[connection signal="pressed" from="UILayer/MainMenu/NewGameButton" to="UILayer/MainMenu" method="_on_NewGameButton_pressed"]
[connection signal="visibility_changed" from="UILayer/CityMenu" to="UILayer/CityMenu" method="_on_CityMenu_visibility_changed"]
[connection signal="button_down" from="UILayer/CityMenu/DragButton" to="UILayer/CityMenu" method="_on_DragButton_button_down"]
[connection signal="button_up" from="UILayer/CityMenu/DragButton" to="UILayer/CityMenu" method="_on_DragButton_button_up"]
[connection signal="pressed" from="UILayer/CityMenu/XButton" to="UILayer/CityMenu" method="_on_XButton_pressed"]
[connection signal="pressed" from="UILayer/CityMenu/MarketButton" to="UILayer/MarketMenu" method="_on_MarketButton_pressed"]
[connection signal="visibility_changed" from="UILayer/MarketMenu" to="UILayer/MarketMenu" method="_on_MarketMenu_visibility_changed"]
[connection signal="button_down" from="UILayer/MarketMenu/DragButton" to="UILayer/MarketMenu" method="_on_DragButton_button_down"]
[connection signal="button_up" from="UILayer/MarketMenu/DragButton" to="UILayer/MarketMenu" method="_on_DragButton_button_up"]
[connection signal="pressed" from="UILayer/MarketMenu/XButton" to="UILayer/MarketMenu" method="_on_XButton_pressed"]
[connection signal="pressed" from="UILayer/MarketMenu/MarketUp" to="UILayer/MarketMenu" method="_on_MarketUp_pressed"]
[connection signal="pressed" from="UILayer/MarketMenu/MarketDown" to="UILayer/MarketMenu" method="_on_MarketDown_pressed"]
[connection signal="pressed" from="UILayer/MarketMenu/ShipUp" to="UILayer/MarketMenu" method="_on_ShipUp_pressed"]
[connection signal="pressed" from="UILayer/MarketMenu/ShipDown" to="UILayer/MarketMenu" method="_on_ShipDown_pressed"]
[connection signal="pressed" from="UILayer/MarketMenu/BackButton" to="UILayer/MarketMenu" method="_on_BackButton_pressed"]
